Bump powsybl-core to 6.1.0-alpha-1
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>